src/test/ui/did_you_mean/issue-40006.stderr
error: can't qualify macro invocation with `pub`
  --> $DIR/issue-40006.rs:14:5
   |
14 |     pub hello_method(&self) {
   |     ^^^-            - expected `!` here for a macro invocation
   |        |
   |        did you mean to write `fn` here for a method declaration?
   |
   = help: try adjusting the macro to put `pub` inside the invocation

error: aborting due to previous error

